--- a/6-module/1-task/index.html
+++ b/6-module/1-task/index.html
@@ -63,8 +63,13 @@
       }
     ];
 
+    console.log('rows arr:', rows);
+    
+
     let table = new UserTable(rows);
+    console.log('table', table);
     document.body.append(table.elem);
+    
 
   </script>
 </body>
