--- a/6-module/3-task/index.html
+++ b/6-module/3-task/index.html
@@ -7,7 +7,7 @@
   <title>Бангкок Экспресс: Карусель</title>
 
   <link rel="stylesheet" href="./index.css" />
-  <link rel="stylesheet" href="/assets/styles/common.css" />
+  <link rel="stylesheet" href="../../assets/styles/common.css" />
 </head>
 
 <body>
@@ -20,6 +20,8 @@
 
     let carousel = new Carousel(slides);
     let containerElement = document.body.querySelector('.container');
+
+    console.log('carousel', carousel);
 
     containerElement.append(carousel.elem);
   </script>
