--- a/7-module/1-task/index.html
+++ b/7-module/1-task/index.html
@@ -7,7 +7,7 @@
   <title>Бангкок Экспресс: Лента-Меню</title>
 
   <link rel="stylesheet" href="./index.css" />
-  <link rel="stylesheet" href="/assets/styles/common.css" />
+  <link rel="stylesheet" href="/jsbasic-20220418_maksim-ryabenko/assets/styles/common.css" />
 </head>
 
 <body>
