chore: implemented the positioning of the cart icon when scrolling

--- a/8-module/1-task/index.html
+++ b/8-module/1-task/index.html
@@ -69,10 +69,12 @@
       products: [],
 
       isEmpty() {
+        console.log('cart:', cart)
         return this.products.length === 0;
       },
 
       getTotalCount() {
+        console.log('cart:', cart)
         return this.products.length;
       },
 
@@ -100,6 +102,8 @@
 
       cartIcon.update(cart);
     };
+
+    console.log('cart:', cart)
 
   </script>
 </body>
